--- a/Publishing/login.html
+++ b/Publishing/login.html
@@ -15,12 +15,12 @@
 <div class="tit_style1">Log in</div>
 <section class="input_wrap">
   <section class="input_box">
-    <label for="">E-mail</label>
-    <input type="text" name="" value="" placeholder="이메일을 입력해주세요">
+    <label for="text1">E-mail</label>
+    <input type="text" name="" value="" placeholder="이메일을 입력해주세요" id="tex1">
   </section>
   <section class="input_box">
-    <label for="">Password</label>
-    <input type="text" name="" value="" placeholder="비밀번호를 입력해주세요">
+    <label for="text2">Password</label>
+    <input type="text" name="" value="" placeholder="비밀번호를 입력해주세요" id="tex1">
   </section>
 </section>
 <section class="bt_wrap_hor_box">
