--- a/Publishing/category.html
+++ b/Publishing/category.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,32 +10,55 @@
 <body>
 <header>
   <button type="button" name="button" class="bt_back"></button>
+  <span>Category</span>
 </header>
-<div class="tit_style1">Log in</div>
-<section class="input_wrap">
-  <section class="input_box">
-    <label for="">E-mail</label>
-    <input type="text" name="" value="" placeholder="이메일을 입력해주세요">
-  </section>
-  <section class="input_box">
-    <label for="">Password</label>
-    <input type="text" name="" value="" placeholder="비밀번호를 입력해주세요">
-  </section>
+<section class="text_box" style="display:none">
+  <p>
+    등록된 습관이 없습니다<br />
+    만들고 싶은 습관을 추가해보세요
+  </p>
+  <p>
+    습관이란 인간으로 하여금<br />
+    그 어떤 일도 할 수 있게 만들어준다
+  </p>
+  <p>
+    - 도스토옙스키 -
+  </p>
 </section>
-<section class="bt_wrap_hor_box">
-  <section class="bt_wrap_hor">
-    <button type="button" name="button" class="bt_white">회원가입</button>
-    <button type="button" name="button" class="bt_blue">로그인</button>
-  </section>
+<section class="box_wrap">
+  <article class="box">
+    <div class="title">건강</div>
+    <div class="check_wrap">
+      <div class="check_list">
+        <input type="checkbox" name="" value="" id="check1">
+        <label for="check1">계단으로 출근하기</label>
+      </div>
+      <div class="check_list">
+        <input type="checkbox" name="" value="" id="check2">
+        <label for="check2">하루 물 8잔 마시기</label>
+      </div>
+      <div class="check_list">
+        <input type="checkbox" name="" value="" id="check3">
+        <label for="check3">취침 전 스트레칭</label>
+      </div>
+    </div>
+  </article>
+    <article class="box">
+      <div class="title">건강</div>
+      <div class="check_wrap">
+        <div class="check_list">
+          <input type="checkbox" name="" value="" id="check4">
+          <label for="check4">계단으로 출근하기</label>
+        </div>
+        <div class="check_list">
+          <input type="checkbox" name="" value="" id="check5">
+          <label for="check5">하루 물 8잔 마시기</label>
+        </div>
+        <div class="check_list">
+          <input type="checkbox" name="" value="" id="check6">
+          <label for="check6">취침 전 스트레칭</label>
+        </div>
+      </div>
+    </article>
 </section>
-
-<section class="bt_wrap_ver_box">
-  <div class="title">OR</div>
-    <button type="button" name="button" class="bt_facebook">페이스북 계정으로 로그인</button>
-    <button type="button" name="button" class="bt_google">구글 계정으로 로그인</button>
-</section>
-
-<button type="button" name="button" class="bt_gray">
-  계정을 잊으셨나요?
-</button>
 </body>
