--- a/Publishing/category.html
+++ b/Publishing/category.html
@@ -26,39 +26,75 @@
   </p>
 </section>
 <section class="box_wrap">
-  <article class="box">
+  <article class="box bg_health">
     <div class="title">건강</div>
     <div class="check_wrap">
       <div class="check_list">
-        <input type="checkbox" name="" value="" id="check1">
-        <label for="check1">계단으로 출근하기</label>
+        <input type="checkbox" name="" value="" id="health1">
+        <label for="health1">계단으로 출근하기</label>
       </div>
       <div class="check_list">
-        <input type="checkbox" name="" value="" id="check2">
-        <label for="check2">하루 물 8잔 마시기</label>
+        <input type="checkbox" name="" value="" id="health2">
+        <label for="health2">하루 물 8잔 마시기</label>
       </div>
       <div class="check_list">
-        <input type="checkbox" name="" value="" id="check3">
-        <label for="check3">취침 전 스트레칭</label>
+        <input type="checkbox" name="" value="" id="health3">
+        <label for="health3">취침 전 스트레칭</label>
       </div>
     </div>
   </article>
-    <article class="box">
-      <div class="title">건강</div>
-      <div class="check_wrap">
-        <div class="check_list">
-          <input type="checkbox" name="" value="" id="check4">
-          <label for="check4">계단으로 출근하기</label>
-        </div>
-        <div class="check_list">
-          <input type="checkbox" name="" value="" id="check5">
-          <label for="check5">하루 물 8잔 마시기</label>
-        </div>
-        <div class="check_list">
-          <input type="checkbox" name="" value="" id="check6">
-          <label for="check6">취침 전 스트레칭</label>
-        </div>
+  <article class="box bg_diet">
+    <div class="title">다이어트</div>
+    <div class="check_wrap">
+      <div class="check_list">
+        <input type="checkbox" name="" value="" id="diet1">
+        <label for="diet1">1800칼로리 섭취</label>
       </div>
-    </article>
+    </div>
+  </article>
+  <article class="box bg_self_dev">
+    <div class="title">자기계발</div>
+    <div class="check_wrap">
+      <div class="check_list">
+        <input type="checkbox" name="" value="" id="self_dev1">
+        <label for="self_dev1">영어단어 10개 외우기</label>
+      </div>
+      <div class="check_list">
+        <input type="checkbox" name="" value="" id="self_dev2">
+        <label for="self_dev2">책 10장 읽기</label>
+      </div>
+    </div>
+  </article>
+  <article class="box bg_invest">
+    <div class="title">저축/재테크</div>
+    <div class="check_wrap">
+      <div class="check_list">
+        <input type="checkbox" name="" value="" id="invest1">
+        <label for="invest1">하루 1,000원 모으기</label>
+      </div>
+      <div class="check_list">
+        <input type="checkbox" name="" value="" id="invest2">
+        <label for="invest2">김생민의 영수증 듣기</label>
+      </div>
+    </div>
+  </article>
+  <article class="box bg_religion">
+    <div class="title">종교</div>
+    <div class="check_wrap">
+      <div class="check_list">
+        <input type="checkbox" name="" value="" id="religion1">
+        <label for="religion1">아침 성경 듣기</label>
+      </div>
+    </div>
+  </article>
+  <article class="box bg_ect">
+    <div class="title">기타</div>
+    <div class="check_wrap">
+      <div class="check_list">
+        <input type="checkbox" name="" value="" id="ect1">
+        <label for="ect1">핸드폰 알코올로 닦기</label>
+      </div>
+    </div>
+  </article>
 </section>
 </body>
