수정 - 로그인, 카테고리, 습관 추가 신규 - 습관 상세정보

--- a/Publishing/category.html
+++ b/Publishing/category.html
@@ -12,19 +12,23 @@
   <button type="button" name="button" class="bt_back"></button>
   <span>Category</span>
 </header>
-<section class="text_box" style="display:none">
-  <p>
-    등록된 습관이 없습니다<br />
-    만들고 싶은 습관을 추가해보세요
-  </p>
-  <p>
-    습관이란 인간으로 하여금<br />
-    그 어떤 일도 할 수 있게 만들어준다
-  </p>
-  <p>
-    - 도스토옙스키 -
-  </p>
-</section>
+<!-- 메모 없을 때 display:block -->
+<div style="display:none">
+  <section class="text_box">
+    <p>
+      등록된 습관이 없습니다<br />
+      만들고 싶은 습관을 추가해보세요
+    </p>
+    <p>
+      습관이란 인간으로 하여금<br />
+      그 어떤 일도 할 수 있게 만들어준다
+    </p>
+    <p>
+      - 도스토옙스키 -
+    </p>
+  </section>
+  <button type="button" name="button" class="bt_add"></button>
+</div>
 <section class="box_wrap">
   <article class="box bg_health">
     <div class="title">건강</div>
