--- a/Publishing/add_list.html
+++ b/Publishing/add_list.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,9 +17,10 @@
     <label for="">Start</label>
     <input type="date" name="" value="2017-12-29">
   </div>
+  <div class="ico_arrow"></div>
   <div class="input_box2">
     <label for="">Finish</label>
-    <input type="date" name="" value="2018-01-21">
+    <input type="date" name="" value="2018-01-21" disabled>
   </div>
 </div>
 <div class="input_wrap3">
